stuck on fixing the pictures 22:35

--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -12,6 +12,7 @@
 
 .i-right{
     flex: 1;
+    position: relative;
 }
 .i-left-wrapper{
     padding: 50px;
@@ -67,4 +68,14 @@ font-size: 60px;
     width: 100%;
     height: 100%;
     object-fit: cover;
+    position: absolute;
+}
+
+.i-bg{
+    clip-path: circle(50% at 100% 49%);    background-color: green;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
